--- a/Makefile.x64dtv
+++ b/Makefile.x64dtv
@@ -342,10 +342,13 @@ SOURCES_C += \
     $(EMU)/vicii/viciidtv-draw.c \
     $(EMU)/vicii/viciidtv-snapshot.c \
     $(EMU)/video/render1x1.c \
+    $(EMU)/video/render1x1ntsc.c \
+    $(EMU)/video/render1x1pal.c \
     $(EMU)/video/video-canvas.c \
     $(EMU)/video/video-cmdline-options.c \
     $(EMU)/video/video-color.c \
     $(EMU)/video/video-render.c \
+    $(EMU)/video/video-render-pal.c \
     $(EMU)/video/video-resources.c \
     $(EMU)/video/video-sound.c \
     $(EMU)/video/video-viewport.c \
@@ -370,7 +373,6 @@ SOURCES_C += \
     $(RETRODEP)/printerdrv/drv-nl10.c \
     $(RETRODEP)/samplerdrv/file_drv.c \
     $(RETRODEP)/samplerdrv/sampler.c \
+    $(RETRODEP)/video/renderscale2x.c \
     $(RETRODEP)/video/video-render-2x2.c \
-    $(RETRODEP)/video/video-render-crt.c \
-    $(RETRODEP)/video/video-render-pal.c \
 
