--- a/Makefile.xpet
+++ b/Makefile.xpet
@@ -323,10 +323,12 @@ SOURCES_C += \
     $(EMU)/vdrive/vdrive.c \
     $(EMU)/vicefeatures.c \
     $(EMU)/video/render1x1.c \
+    $(EMU)/video/render1x1crt.c \
     $(EMU)/video/video-canvas.c \
     $(EMU)/video/video-cmdline-options.c \
     $(EMU)/video/video-color.c \
     $(EMU)/video/video-render.c \
+    $(EMU)/video/video-render-crt.c \
     $(EMU)/video/video-resources.c \
     $(EMU)/video/video-sound.c \
     $(EMU)/video/video-viewport.c \
@@ -348,8 +350,7 @@ SOURCES_C += \
     $(RETRODEP)/printerdrv/drv-nl10.c \
     $(RETRODEP)/samplerdrv/file_drv.c \
     $(RETRODEP)/samplerdrv/sampler.c \
+    $(RETRODEP)/video/renderscale2x.c \
     $(RETRODEP)/video/video-render-1x2.c \
     $(RETRODEP)/video/video-render-2x2.c \
-    $(RETRODEP)/video/video-render-crt.c \
-    $(RETRODEP)/video/video-render-pal.c \
 
