--- a/Makefile.xplus4
+++ b/Makefile.xplus4
@@ -343,10 +343,13 @@ SOURCES_C += \
     $(EMU)/vdrive/vdrive.c \
     $(EMU)/vicefeatures.c \
     $(EMU)/video/render1x1.c \
+    $(EMU)/video/render1x1ntsc.c \
+    $(EMU)/video/render1x1pal.c \
     $(EMU)/video/video-canvas.c \
     $(EMU)/video/video-cmdline-options.c \
     $(EMU)/video/video-color.c \
     $(EMU)/video/video-render.c \
+    $(EMU)/video/video-render-pal.c \
     $(EMU)/video/video-resources.c \
     $(EMU)/video/video-sound.c \
     $(EMU)/video/video-viewport.c \
@@ -369,6 +372,4 @@ SOURCES_C += \
     $(RETRODEP)/samplerdrv/file_drv.c \
     $(RETRODEP)/samplerdrv/sampler.c \
     $(RETRODEP)/video/video-render-2x2.c \
-    $(RETRODEP)/video/video-render-crt.c \
-    $(RETRODEP)/video/video-render-pal.c \
 
