--- a/Makefile.common
+++ b/Makefile.common
@@ -184,16 +184,19 @@ SOURCES_C += \
 	$(DEPS_DIR)/libz/zutil.c
 
 SOURCES_C += \
+	$(DEPS_DIR)/7zip/7zArcIn.c \
 	$(DEPS_DIR)/7zip/7zBuf.c \
 	$(DEPS_DIR)/7zip/7zCrc.c \
 	$(DEPS_DIR)/7zip/7zCrcOpt.c \
 	$(DEPS_DIR)/7zip/7zDec.c \
 	$(DEPS_DIR)/7zip/7zFile.c \
-	$(DEPS_DIR)/7zip/7zIn.c \
 	$(DEPS_DIR)/7zip/7zStream.c \
 	$(DEPS_DIR)/7zip/Bcj2.c \
 	$(DEPS_DIR)/7zip/Bra.c \
 	$(DEPS_DIR)/7zip/Bra86.c \
+	$(DEPS_DIR)/7zip/BraIA64.c \
+	$(DEPS_DIR)/7zip/CpuArch.c \
+	$(DEPS_DIR)/7zip/Delta.c \
 	$(DEPS_DIR)/7zip/Lzma2Dec.c \
 	$(DEPS_DIR)/7zip/LzmaDec.c
 
